GRAPH-1658 replaced tinkerpop ComputerVerificationStrategy (#1217)